frontend/test/should_fail/copyAnonymous.grg
test t {
	x:Node;
	:copy<x>; // not implemented as of now, tell user; maybe it's worth to get implemented
}

